--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
+    "nasa-neows": "^2.0.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
